# aoc2024-codspeed

./: Cargo.toml
.github/workflows/: codspeed.yml  debug.yml
benches/: advent2024.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
