[package]
name = "aoc2024-codspeed"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "advent2024"
harness = false

[dependencies]
arrayvec = "0.7.6"
bitvec = "1.0.1"
enumset = "1.1.5"
memchr = "2.7.4"
regex = "1.11.1"
